--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ cache:
   directories:
   - node_modules
 script:
-- npm test
+  - npm test
+  - npm run build
 deploy:
   provider: heroku
   api_key: $HEROKU
