--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
+    "@types/faker": "^4.1.12",
     "@types/jest": "25.1.4",
     "@types/mongoose": "^5.7.24",
     "@types/node": "^13.9.1",
@@ -47,7 +48,9 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "faker": "^4.1.0",
     "jest": "^25.1.0",
+    "mongodb-memory-server": "^6.6.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.0.0",
